# testme-api-tests

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  RELEASE.md  docker-compose.yml  pyproject.toml  pytest.ini
api/: __init__.py  auth_client.py  base_client.py  stats_client.py  test_cases_client.py
config/: __init__.py  settings.py
data/: __init__.py  factories.py
models/: __init__.py  error.py  stats.py  test_case.py
tests/: conftest.py  test_auth.py  test_lists.py  test_stats.py  test_test_cases.py
utils/: __init__.py  assertions.py  logger.py
